@@ -1,3 +1,9 @@
+2008-04-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-22-06
+	* webserver/converter: updates (Ulf)
+	* gui: OutputModule Editor
+
 2008-04-02  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-22-05
